--- a/LightMeter/AndroidManifest.xml
+++ b/LightMeter/AndroidManifest.xml
@@ -13,6 +13,5 @@
         </activity>
 
     </application>
-
-
+	<uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
 </manifest> 
