use lightSensorRepo to start/stop sensors. added lightSensorFactory for the sake of testing

--- a/LightMeter/build.properties
+++ b/LightMeter/build.properties
@@ -1,2 +1,2 @@
-key.store=../tools/keys/androidKey
-key.alias=kaipic.com/
+key.store=../../tools/keys/lightmeterReleaseKey.keystore
+key.alias=kailuowang
