--- a/LightMeter/AndroidManifest.xml
+++ b/LightMeter/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.kaipic.lightmeter"
           android:versionCode="1"
-          android:versionName="1.0">
+          android:versionName="1.0"
+        >
+  <uses-sdk android:minSdkVersion="2" />
   <application android:icon="@drawable/icon" android:label="@string/app_name">
     <activity android:name=".MainWindow"
               android:label="@string/app_name"
@@ -14,5 +16,4 @@
     </activity>
 
   </application>
-  <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
 </manifest> 
