--- a/LightMeter/AndroidManifest.xml
+++ b/LightMeter/AndroidManifest.xml
@@ -2,13 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.kaipic.lightmeter"
           android:versionCode="1"
-          android:versionName="1.0"
-        >
-  <uses-sdk android:minSdkVersion="2" />
+          android:versionName="1.0">
+  <uses-sdk android:minSdkVersion="2"/>
   <application android:icon="@drawable/icon" android:label="@string/app_name">
     <activity android:name=".MainWindow"
               android:label="@string/app_name"
-              android:screenOrientation="portrait">
+              android:screenOrientation="portrait"
+              android:theme="@style/MyTheme">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
