added work mode and spinner for shutter speed

--- a/LightMeter/AndroidManifest.xml
+++ b/LightMeter/AndroidManifest.xml
@@ -15,4 +15,6 @@
       </intent-filter>
     </activity>
   </application>
-</manifest> 
+  <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
+
+</manifest>
