--- a/LightMeter/AndroidManifest.xml
+++ b/LightMeter/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.kaipic.lightmeter"
           android:versionCode="5"
-          android:versionName="1.01a">
+          android:versionName="1.1Beta">
   <uses-sdk android:minSdkVersion="2"/>
   <application android:icon="@drawable/icon" android:label="@string/app_name">
     <activity android:name=".MainWindow"
